// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attribute.hbs - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<div title='

  a title with random


  newlines'></div>

<div TITLE='

  a title with random


  newlines'></div>

<div title='

  a title with random


  newlines
  and {{mustaches}}

'></div>

<div TITLE='

  a title with random


  newlines
  and {{mustaches}}

'></div>

=====================================output=====================================
<div title='

  a title with random


  newlines'></div>

<div TITLE='

  a title with random


  newlines'></div>

<div title='

  a title with random


  newlines
  and {{mustaches}}

'></div>

<div TITLE='

  a title with random


  newlines
  and {{mustaches}}

'></div>
================================================================================
`;

exports[`attribute.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div title='

  a title with random


  newlines'></div>

<div TITLE='

  a title with random


  newlines'></div>

<div title='

  a title with random


  newlines
  and {{mustaches}}

'></div>

<div TITLE='

  a title with random


  newlines
  and {{mustaches}}

'></div>

=====================================output=====================================
<div title="

  a title with random


  newlines"></div>

<div TITLE="

  a title with random


  newlines"></div>

<div title="

  a title with random


  newlines
  and {{mustaches}}

"></div>

<div TITLE="

  a title with random


  newlines
  and {{mustaches}}

"></div>
================================================================================
`;

exports[`brackets.hbs - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<div title='My title'></div>
<div title="My title"></div>
<div title='My "title"'></div>
<div title="My other 'title'"></div>

=====================================output=====================================
<div title='My title'></div>
<div title='My title'></div>
<div title='My "title"'></div>
<div title="My other 'title'"></div>
================================================================================
`;

exports[`brackets.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div title='My title'></div>
<div title="My title"></div>
<div title='My "title"'></div>
<div title="My other 'title'"></div>

=====================================output=====================================
<div title="My title"></div>
<div title="My title"></div>
<div title='My "title"'></div>
<div title="My other 'title'"></div>
================================================================================
`;

exports[`trimming-and-whitespace.hbs - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<div class='class and other'></div>
<div class='class and other'></div>
<div CLASs='class and other'></div>
<p class='a list of weirdly formatted classes'>
  String
</p>
<p
  class='a list of


weirdly formatted

  {{this.classes}}'
>
  String
</p>
<p
  CLASS='a list of


weirdly formatted

  {{this.classes}}'
>
  String
</p>
================================================================================
`;

exports[`class-name.hbs format 1`] = `
=======
<div class="attr
"></div>

<div class="
attr"></div>

<div class="
attr
"></div>

<div class="



attr


"></div>

<div class="
    attr
      attr

  attr
                       attr
          attr
"></div>
=====================================output=====================================
<div class='attr'></div>

<div class='attr'></div>

<div class='attr'></div>

<div class='attr'></div>

<div
  class='attr
      attr

  attr
                       attr
          attr'
></div>
================================================================================
`;

exports[`trimming-and-whitespace.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div class="class and other"></div>
<div class="class and other"></div>
<div CLASs="class and other"></div>
<p class="a list of weirdly formatted classes">
  String
</p>
<p
  class="a list of


weirdly formatted

  {{this.classes}}"
>
  String
</p>
<p
  CLASS="a list of


weirdly formatted

  {{this.classes}}"
>
  String
</p>
=======
<div class="attr
"></div>

<div class="
attr"></div>

<div class="
attr
"></div>

<div class="



attr


"></div>

<div class="
    attr
      attr

  attr
                       attr
          attr
"></div>
=====================================output=====================================
<div class="attr"></div>

<div class="attr"></div>

<div class="attr"></div>

<div class="attr"></div>

<div
  class="attr
      attr

  attr
                       attr
          attr"
></div>
================================================================================
`;

exports[`trimming-and-whitespace.hbs - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<div class="attr
"></div>

<div class="
attr"></div>

<div class="
attr
"></div>

<div class="



attr


"></div>

<div class="
    attr
      attr

  attr
                       attr
          attr
"></div>
=====================================output=====================================
<div class='attr'></div>

<div class='attr'></div>

<div class='attr'></div>

<div class='attr'></div>

<div class='attr attr attr attr attr'></div>
================================================================================
`;

exports[`trimming-and-whitespace.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div class="attr
"></div>

<div class="
attr"></div>

<div class="
attr
"></div>

<div class="



attr


"></div>

<div class="
    attr
      attr

  attr
                       attr
          attr
"></div>
=====================================output=====================================
<div class="attr"></div>

<div class="attr"></div>

<div class="attr"></div>

<div class="attr"></div>

<div class="attr attr attr attr attr"></div>
================================================================================
`;
